2010-05-06  TOMITA Masahiro  <tommy@tmtm.org>

	* spec/mysql_spec.rb: use environment variables for MySQL
	connection.

2010-01-17  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb (Mysql#errno): Fix: Mysql#errno's default value
	should be 0.

2010-01-16  TOMITA Masahiro  <tommy@tmtm.org>

	* lib/mysql.rb (Mysql#escape_string): raise error for unsafe
	multibyte charset

2010-01-15  TOMITA Masahiro  <tommy@tmtm.org>

	* Fix: When GC destroy Mysql::Stmt object, protocol error occurred

2010-01-10  TOMITA Masahiro  <tommy@tmtm.org>

	* Version 2.9.0-beta